# rag-study-assistant

./: .env.example  .gitignore  Makefile  PROJECT_STATE.md  README.md  pyproject.toml
apps/streamlit/: Home.py
config/: default.yaml
docs/: PROJECT_STATE.md
scripts/: reset_all_assets.sh  reset_asset.sh  run_qdrant.sh
src/rag_assistant/: __init__.py  __main__.py  cli.py  config.py  logging.py
src/rag_study_assistant.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
tests/: test_answerer_embedding_normalization.py  test_answerer_flat_hits.py  test_answerer_notes_retrieval.py  test_answerer_web_flow.py  test_answerer_web_guardrails.py  test_asset_delete_replace.py  test_chat_empty_index_message.py  test_chunk_id_backfill_format.py  test_chunk_migration.py  test_chunker.py  test_citations_render_web.py  test_cli_ingest.py  test_config_load.py  test_context_expander.py  test_db_init.py  test_db_migration_chunks_asset_id.py  test_embedding_validator.py  test_health_service.py  test_imports.py  test_ingest_tables.py  test_judge.py  test_local_embedder_dim.py  test_missing_assets_cleanup.py  test_notes_pdf_service.py  test_notes_service.py  test_ocr_normalization.py  test_ollama_client.py  test_paddle_ocr_api_guard.py  test_paddle_wrapper_kwargs.py  test_pdf_render.py  test_pipeline_progression.py  test_qdrant_collection_count_compat.py  test_qdrant_hydration.py  test_qdrant_payload_preserved.py  test_qdrant_point_ids_uuid.py  test_qdrant_retry_and_payload.py  test_qdrant_search_compat.py  test_qdrant_search_vector_param.py  test_query_builder.py  test_retrieval_retry_no_filter.py  (+7 more)
(+55 files in other folders)
